--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -1,1 +1,6 @@
-<p>comment works!</p>
+<article class="comment">
+  <button class="comment-delete-button" (click)="delete()">&times;</button>
+  <div class="comment-text">
+    <p>{{ comment?.text }}</p>
+  </div>
+</article>
