--- a/src/app/layouts/main/main.component.scss
+++ b/src/app/layouts/main/main.component.scss
@@ -1,4 +1,21 @@
+.app {
+  padding: 4rem;
+}
+
 main {
   padding: 4rem;
 }
 
+header {
+  font-size: 4rem;
+  color: rgb(255, 255, 255);
+  -webkit-text-fill-color: rgb(255, 255, 255);
+  -webkit-text-stroke-width: 0.2rem;
+  -webkit-text-stroke-color: rgb(32, 133, 192);
+  text-align: center;
+}
+
+.new-comment {
+  margin: 0 auto;
+  max-width: 60%;
+}
