--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,10 @@ body {
 .width-100 {
   width: 100%;
 }
+
+.btn {
+  display: inline-block;
+  padding: 0.75rem 1.25rem;
+  font-size: 2rem;
+  outline: none;
+}
